[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# http = "0.2.6"
monoio = { version = "0.0.4" }
# async-h1 = { version = "2.3.3" }
httparse = { version = "1.7.0" }
http-types = "2.12.0"
# Benchmark all these
fnv = "1.0.7"
fxhash = "0.2.1"
indexmap = "1.8.1"
# Some async utilities
futures-util = "0.3.21"
# Parallelize iteration
rayon = "1.5.2"
# Error handling
thiserror = "1.0.30"
# Serialization/Deserialization
serde = "1.0.137"
# Benchmark these two
simd-json = "0.4.15"
serde_json = "1.0.80"
async-trait = "0.1.53"
